# alchemyjson

./: LICENSE.BSD  README.rst  post_release_hook.sh  requirements.txt  setup.cfg  setup.py
alchemyjson/: __init__.py  manager.py
alchemyjson/alchemyjson/: __init__.py  main.py
alchemyjson/tests/: __init__.py  initializer.py  mapping.py  test_alchemyjson.py  test_manager.py  test_ui_alchemyjson.py  test_ui_manager.py  test_utils.py
alchemyjson/utils/: __init__.py  helpers.py  parser.py  search.py  views.py
docs/: Documentation.rst  Introduction.rst  Select.rst  TODO  conf.py  index.rst  license.rst
