[metadata]
name=alchemyjson
summary=tool to jsonify interaction with sqlalchemy
author = chiesa
author-email = samuele.chiesa@internal.alp
description-file = README.rst
dependency_links = http://www.internal.alp:7000/simple
license = BSD
classifier = 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
keywords=alchemyjson
[files]
packages = 
     alchemyjson
[entry_points]
console_scripts = 
   alchemyjson_alchemyjson = alchemyjson.alchemyjson.main:main